--- a/fprime-sensors/NmeaGps/Components/CMakeLists.txt
+++ b/fprime-sensors/NmeaGps/Components/CMakeLists.txt
@@ -1,1 +1,2 @@
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/GpsManager/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/NmeaDetector/")
