--- a/fprime-sensors/MpuImu/Subtopology/MpuImuConfig/CMakeLists.txt
+++ b/fprime-sensors/MpuImu/Subtopology/MpuImuConfig/CMakeLists.txt
@@ -3,4 +3,6 @@ register_fprime_config(
         "${CMAKE_CURRENT_LIST_DIR}/MpuImuSubtopologyConfig.fpp"
     DEPENDS
         Fw_Types
+    HEADERS
+        "${CMAKE_CURRENT_LIST_DIR}/MpuImuSubtopologyConfig.hpp"
 )
