Fix/gps subtopo (#3)
* Update GPS subtopology

* Make GPS a configurable subtopology

* Fix pointer arithmitic

--- a/fprime-sensors/MpuImu/Subtopology/CMakeLists.txt
+++ b/fprime-sensors/MpuImu/Subtopology/CMakeLists.txt
@@ -3,5 +3,5 @@ add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MpuImuConfig")
 register_fprime_module(
     AUTOCODER_INPUTS
         "${CMAKE_CURRENT_LIST_DIR}/Subtopology.fpp"
-    
+    EXCLUDE_FROM_ALL
 )
