--- a/fprime-sensors/CMakeLists.txt
+++ b/fprime-sensors/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Helpers")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/NmeaGps")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MpuImu")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Bmp280")
