--- a/fprime-sensors/PiCamera/CMakeLists.txt
+++ b/fprime-sensors/PiCamera/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Components/PiCameraManager/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Components")
